# School

./: 279.cpp  CMakeLists.txt  diophonkosz.cpp  heronsqr.cpp  linux.cpp  main.cpp  roka.cpp
